[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Joan Ponsa Pont <ponsapont@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
chrono = "0.4.19"
anyhow = "1.0.51"
structopt = "0.3.25"
